# sopro-project-generator

./: README.md  main.py  pyproject.toml  run_api.py
