[project]
name = "sopro-app"
version = "0.1.0"
description = "SOPRO: Agente especialista em geração de projetos para democratizar ideias e potencializar impacto"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=0.3.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "streamlit>=1.28.0",
    "gradio>=4.7.0",
    "openai>=1.0.0",
    "tavily-python>=0.3.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "reportlab>=4.0.0",
    "PyPDF2>=3.0.0",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "faiss-cpu>=1.7.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.8",
    "langchain-community>=0.0.20",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    # Additional API dependencies
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
]